# numr

./: Cargo.toml  README.md  example.numr
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD
crates/numr-cli/src/: main.rs  server.rs
crates/numr-core/src/: fetch.rs  lib.rs  wasm.rs
crates/numr-core/src/cache/: mod.rs
crates/numr-core/src/eval/: mod.rs
crates/numr-core/src/parser/: ast.rs  mod.rs
crates/numr-core/src/types/: currency.rs  mod.rs  unit.rs  value.rs
crates/numr-core/tests/: base_conversion_tests.rs  cryptocurrency_tests.rs
crates/numr-editor/src/: buffer.rs  highlight.rs  lib.rs
crates/numr-tui/: Cargo.toml
crates/numr-tui/src/: app.rs  config.rs  handlers.rs  main.rs  popups.rs  ui.rs
homebrew/: numr.rb
