[package]
name = "numr-tui"
description = "Terminal UI for numr calculator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "numr"
path = "src/main.rs"

[dependencies]
numr-core = { path = "../numr-core", features = ["fetch"] }
numr-editor = { path = "../numr-editor" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
clap.workspace = true
directories = "6"
tokio.workspace = true
textwrap = "0.16"
toml = "0.8"
serde.workspace = true
